--- a/axonops/templates/default/cassandra-logback.xml.erb
+++ b/axonops/templates/default/cassandra-logback.xml.erb
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
@@ -18,97 +17,158 @@
  under the License.
 -->
 
-<configuration scan="true" scanPeriod="60 seconds">
-  <shutdownHook class="ch.qos.logback.core.hook.DelayingShutdownHook"/>
+<!--
+In order to disable debug.log, comment-out the ASYNCDEBUGLOG
+appender reference in the root level section below.
+-->
 
-  <!-- SYSTEMLOG rolling file appender to system.log -->
+<configuration scan="<%= node['axonops']['cassandra']['logback_scan'] %>" scanPeriod="<%= node['axonops']['cassandra']['logback_scan_period'] %>">
+  <jmxConfigurator />
+
+  <!-- No shutdown hook; we run it ourselves in StorageService after shutdown -->
+
+  <!-- SYSTEMLOG rolling file appender to system.log (INFO level) -->
+
   <appender name="SYSTEMLOG" class="ch.qos.logback.core.rolling.RollingFileAppender">
-    <file><%= @log_dir %>/system.log</file>
+    <filter class="ch.qos.logback.classic.filter.ThresholdFilter">
+      <level><%= node['axonops']['cassandra']['system_log_level'] %></level>
+    </filter>
+    <file>${cassandra.logdir}/system.log</file>
     <rollingPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy">
-      <fileNamePattern><%= @log_dir %>/system.log.%d{yyyy-MM-dd}.%i.zip</fileNamePattern>
-      <maxFileSize>50MB</maxFileSize>
-      <maxHistory>7</maxHistory>
-      <totalSizeCap>5GB</totalSizeCap>
-      <cleanHistoryOnStart>true</cleanHistoryOnStart>
+      <!-- rollover daily -->
+      <fileNamePattern>${cassandra.logdir}/system.log.%d{yyyy-MM-dd}.%i.zip</fileNamePattern>
+      <!-- each file should be at most 50MB, keep 7 days worth of history, but at most 5GB -->
+      <maxFileSize><%= node['axonops']['cassandra']['log_max_file_size'] %></maxFileSize>
+      <maxHistory><%= node['axonops']['cassandra']['log_max_history'] %></maxHistory>
+      <totalSizeCap><%= node['axonops']['cassandra']['log_total_size_cap'] %></totalSizeCap>
     </rollingPolicy>
     <encoder>
-      <pattern>%-5level [%thread] %date{ISO8601} %F:%L - %msg%n</pattern>
+      <pattern><%= node['axonops']['cassandra']['log_pattern'] %></pattern>
     </encoder>
   </appender>
 
-  <!-- DEBUGLOG rolling file appender to debug.log -->
+  <!-- DEBUGLOG rolling file appender to debug.log (all levels) -->
+
   <appender name="DEBUGLOG" class="ch.qos.logback.core.rolling.RollingFileAppender">
-    <file><%= @log_dir %>/debug.log</file>
+    <file>${cassandra.logdir}/debug.log</file>
     <rollingPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy">
-      <fileNamePattern><%= @log_dir %>/debug.log.%d{yyyy-MM-dd}.%i.zip</fileNamePattern>
-      <maxFileSize>50MB</maxFileSize>
-      <maxHistory>7</maxHistory>
-      <totalSizeCap>5GB</totalSizeCap>
-      <cleanHistoryOnStart>true</cleanHistoryOnStart>
+      <!-- rollover daily -->
+      <fileNamePattern>${cassandra.logdir}/debug.log.%d{yyyy-MM-dd}.%i.zip</fileNamePattern>
+      <!-- each file should be at most 50MB, keep 7 days worth of history, but at most 5GB -->
+      <maxFileSize><%= node['axonops']['cassandra']['log_max_file_size'] %></maxFileSize>
+      <maxHistory><%= node['axonops']['cassandra']['log_max_history'] %></maxHistory>
+      <totalSizeCap><%= node['axonops']['cassandra']['log_total_size_cap'] %></totalSizeCap>
     </rollingPolicy>
     <encoder>
-      <pattern>%-5level [%thread] %date{ISO8601} %F:%L - %msg%n</pattern>
+      <pattern><%= node['axonops']['cassandra']['log_pattern'] %></pattern>
     </encoder>
   </appender>
 
-  <!-- ASYNCLOG asynchronous appender to debug.log -->
+  <!-- ASYNCLOG assynchronous appender to debug.log (all levels) -->
+
   <appender name="ASYNCDEBUGLOG" class="ch.qos.logback.classic.AsyncAppender">
-    <queueSize>1024</queueSize>
-    <discardingThreshold>0</discardingThreshold>
+    <queueSize><%= node['axonops']['cassandra']['async_log_queue_size'] %></queueSize>
+    <discardingThreshold><%= node['axonops']['cassandra']['async_log_discarding_threshold'] %></discardingThreshold>
     <includeCallerData>true</includeCallerData>
     <appender-ref ref="DEBUGLOG" />
   </appender>
 
-  <!-- STDOUT console appender to stdout -->
+  <!-- STDOUT console appender to stdout (INFO level) -->
+
   <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
     <filter class="ch.qos.logback.classic.filter.ThresholdFilter">
-      <level><%= @log_level %></level>
+      <level><%= node['axonops']['cassandra']['console_log_level'] %></level>
     </filter>
     <encoder>
-      <pattern>%-5level [%thread] %date{ISO8601} %F:%L - %msg%n</pattern>
+      <pattern><%= node['axonops']['cassandra']['log_pattern'] %></pattern>
     </encoder>
   </appender>
 
-  <!-- Uncomment below configuration (Audit Logging) if setting the audit logs directory 
-       in cassandra.yaml: audit_logging_options.log_dir -->
-  <!-- Audit Logging (FileAuditLogger) rolling file appender to audit.log -->
-  <!-- <appender name="AUDIT" class="ch.qos.logback.core.rolling.RollingFileAppender">
+  <!-- Uncomment below configuration (Audit Logging (FileAuditLogger) rolling file appender and Audit Logging
+  additivity) in order to have the log events flow through separate log file instead of system.log.
+  Audit Logging (FileAuditLogger) rolling file appender to audit.log -->
+<% if node['axonops']['cassandra']['audit_logging_enabled'] -%>
+  <appender name="AUDIT" class="ch.qos.logback.core.rolling.RollingFileAppender">
     <file>${cassandra.logdir}/audit/audit.log</file>
     <rollingPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy">
+      <!-- rollover daily -->
       <fileNamePattern>${cassandra.logdir}/audit/audit.log.%d{yyyy-MM-dd}.%i.zip</fileNamePattern>
-      <maxFileSize>50MB</maxFileSize>
+      <!-- each file should be at most 50MB, keep 30 days worth of history, but at most 5GB -->
+      <maxFileSize><%= node['axonops']['cassandra']['audit_log_max_file_size'] %></maxFileSize>
+      <maxHistory><%= node['axonops']['cassandra']['audit_log_max_history'] %></maxHistory>
+      <totalSizeCap><%= node['axonops']['cassandra']['audit_log_total_size_cap'] %></totalSizeCap>
+    </rollingPolicy>
+    <encoder>
+      <pattern><%= node['axonops']['cassandra']['log_pattern'] %></pattern>
+    </encoder>
+  </appender>
+<% else -%>
+  <!-- <appender name="AUDIT" class="ch.qos.logback.core.rolling.RollingFileAppender">
+    <file>${cassandra.logdir}/audit/audit.log</file>
+    <rollingPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy"> -->
+      <!-- rollover daily -->
+      <!-- <fileNamePattern>${cassandra.logdir}/audit/audit.log.%d{yyyy-MM-dd}.%i.zip</fileNamePattern> -->
+      <!-- each file should be at most 50MB, keep 30 days worth of history, but at most 5GB -->
+      <!-- <maxFileSize>50MB</maxFileSize>
       <maxHistory>30</maxHistory>
       <totalSizeCap>5GB</totalSizeCap>
-      <cleanHistoryOnStart>true</cleanHistoryOnStart>
     </rollingPolicy>
     <encoder>
       <pattern>%-5level [%thread] %date{ISO8601} %F:%L - %msg%n</pattern>
     </encoder>
   </appender> -->
+<% end -%>
 
-  <!-- Audit Logging additivity=false asynchronous appender -->
-  <!-- <appender name="ASYNCAUDIT" class="ch.qos.logback.classic.AsyncAppender">
-    <queueSize>1024</queueSize>
-    <discardingThreshold>0</discardingThreshold>
-    <includeCallerData>true</includeCallerData>
-    <appender-ref ref="AUDIT" />
+  <!-- Audit Logging additivity to redirect audit logging events to audit/audit.log -->
+<% if node['axonops']['cassandra']['audit_logging_enabled'] -%>
+  <logger name="org.apache.cassandra.audit" additivity="false" level="INFO">
+    <appender-ref ref="AUDIT"/>
+  </logger>
+<% else -%>
+  <!-- <logger name="org.apache.cassandra.audit" additivity="false" level="INFO">
+    <appender-ref ref="AUDIT"/>
+  </logger> -->
+<% end -%>
+
+  <!-- Uncomment bellow and corresponding appender-ref to activate logback metrics
+  <appender name="LogbackMetrics" class="com.codahale.metrics.logback.InstrumentedAppender" />
+   -->
+
+  <!-- Uncomment below configuration and corresponding appender-ref to activate
+  logging into system_views.system_logs virtual table. -->
+<% if node['axonops']['cassandra']['cql_log_enabled'] -%>
+  <appender name="CQLLOG" class="org.apache.cassandra.utils.logging.VirtualTableAppender">
+    <filter class="ch.qos.logback.classic.filter.ThresholdFilter">
+      <level><%= node['axonops']['cassandra']['cql_log_level'] %></level>
+    </filter>
+  </appender>
+<% else -%>
+  <!-- <appender name="CQLLOG" class="org.apache.cassandra.utils.logging.VirtualTableAppender">
+    <filter class="ch.qos.logback.classic.filter.ThresholdFilter">
+      <level>WARN</level>
+    </filter>
   </appender> -->
+<% end -%>
 
-  <!-- Root level logging -->
-  <root level="<%= @log_level %>">
+  <root level="<%= node['axonops']['cassandra']['root_log_level'] %>">
     <appender-ref ref="SYSTEMLOG" />
     <appender-ref ref="STDOUT" />
-    <appender-ref ref="ASYNCDEBUGLOG" />
+<% if node['axonops']['cassandra']['debug_log_enabled'] -%>
+    <appender-ref ref="ASYNCDEBUGLOG" /> <!-- Comment this line to disable debug.log -->
+<% else -%>
+    <!-- <appender-ref ref="ASYNCDEBUGLOG" /> --> <!-- Comment this line to disable debug.log -->
+<% end -%>
+    <!--
+    <appender-ref ref="LogbackMetrics" />
+    -->
+<% if node['axonops']['cassandra']['cql_log_enabled'] -%>
+    <appender-ref ref="CQLLOG"/>
+<% else -%>
+    <!--
+    <appender-ref ref="CQLLOG"/>
+    -->
+<% end -%>
   </root>
 
-  <!-- Cassandra package logging -->
-  <logger name="org.apache.cassandra" level="<%= @log_level %>"/>
-  <logger name="com.datastax.driver" level="WARN"/>
-
-  <!-- Uncomment below configuration (Audit Logging) if setting the audit logs directory 
-       in cassandra.yaml: audit_logging_options.log_dir -->
-  <!-- Audit Logging additivity=false logger with log level INFO -->
-  <!-- <logger name="org.apache.cassandra.audit" level="INFO" additivity="false">
-    <appender-ref ref="ASYNCAUDIT" />
-  </logger> -->
+  <logger name="org.apache.cassandra" level="<%= node['axonops']['cassandra']['cassandra_log_level'] %>"/>
 </configuration>
