--- a/axonops/templates/default/cassandra-rackdc.properties.erb
+++ b/axonops/templates/default/cassandra-rackdc.properties.erb
@@ -1,19 +1,93 @@
-# This file is used by GossipingPropertyFileSnitch and will be
-# automatically overwritten by the snitch if certain properties
-# are missing, so you shouldn't store any extra state here.
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
 #
-# The snitch will use this file to determine which nodes are in the
-# local datacenter and rack. It will also attempt to determine the
-# public IP or hostname to use for itself: first by looking for an
-# uncommented line starting with "prefer_local" below, and then by
-# querying an EC2 metadata service for a public IP, and finally by
-# reverse-looking up its own hostname if all else fails.
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
-# These properties are used with GossipingPropertyFileSnitch
-dc=<%= @datacenter %>
-rack=<%= @rack %>
+# These properties are used with GossipingPropertyFileSnitch and will
+# indicate the rack and dc for this node
+dc=<%= node['axonops']['cassandra']['datacenter'] %>
+rack=<%= node['axonops']['cassandra']['rack'] %>
 
-# prefer_local specifies whether to use the local IP address or the public IP
-# for communication with other nodes (for example, within the same rack).
-# Uncomment the following line to use the local IP address:
+# Add a suffix to a datacenter name. Used by all cloud-based snitches.
+<% if node['axonops']['cassandra']['dc_suffix'] -%>
+dc_suffix=<%= node['axonops']['cassandra']['dc_suffix'] %>
+<% else -%>
+#dc_suffix=
+<% end -%>
+
+# Uncomment the following line to make this snitch prefer the internal ip when possible, as the Ec2MultiRegionSnitch does.
+<% if node['axonops']['cassandra']['prefer_local'] -%>
+prefer_local=<%= node['axonops']['cassandra']['prefer_local'] %>
+<% else -%>
 # prefer_local=true
+<% end -%>
+
+# Datacenter and rack naming convention used by the Ec2Snitch and Ec2MultiRegionSnitch.
+# Options are:
+#   legacy : datacenter name is the part of the availability zone name preceding the last "-"
+#       when the zone ends in -1 and includes the number if not -1. Rack is the portion of
+#       the availability zone name following  the last "-".
+#       Examples: us-west-1a => dc: us-west, rack: 1a; us-west-2b => dc: us-west-2, rack: 2b; 
+#       YOU MUST USE THIS VALUE IF YOU ARE UPGRADING A PRE-4.0 CLUSTER
+#   standard : Default value. datacenter name is the standard AWS region name, including the number.
+#       rack name is the region plus the availability zone letter.
+#       Examples: us-west-1a => dc: us-west-1, rack: us-west-1a; us-west-2b => dc: us-west-2, rack: us-west-2b;
+<% if node['axonops']['cassandra']['ec2_naming_scheme'] -%>
+ec2_naming_scheme=<%= node['axonops']['cassandra']['ec2_naming_scheme'] %>
+<% else -%>
+# ec2_naming_scheme=standard
+<% end -%>
+#
+# Type of AWS IMDS, value might be either "v1" or "v2". Defaults to "v2".
+<% if node['axonops']['cassandra']['ec2_metadata_type'] -%>
+ec2_metadata_type=<%= node['axonops']['cassandra']['ec2_metadata_type'] %>
+<% else -%>
+# ec2_metadata_type=v2
+<% end -%>
+# If AWS IMDS of v2 is configured, ec2_metadata_token_ttl_seconds says how many seconds a token will be valid until
+# it is refreshed. Defaults to 21600. Can not be smaller than 30 and bigger than 21600. Has to be an integer.
+<% if node['axonops']['cassandra']['ec2_metadata_token_ttl_seconds'] -%>
+ec2_metadata_token_ttl_seconds=<%= node['axonops']['cassandra']['ec2_metadata_token_ttl_seconds'] %>
+<% else -%>
+# ec2_metadata_token_ttl_seconds=21600
+<% end -%>
+
+# AzureSnitch
+# Options are:
+# Version of API to talk to. When not set, defaults to '2021-12-13'.
+<% if node['axonops']['cassandra']['azure_api_version'] -%>
+azure_api_version=<%= node['axonops']['cassandra']['azure_api_version'] %>
+<% else -%>
+# azure_api_version=2021-12-13
+<% end -%>
+
+# For all cloud-based snitches, there are following options available:
+#
+# Property to change metadata service url for a cloud-based snitch. The endpoint of a particular
+# snitch will be appended to this property. A user is not normally using this property, it is here
+# for tweaking the url of a service itself, e.g. for testing purposes.
+<% if node['axonops']['cassandra']['metadata_url'] -%>
+metadata_url=<%= node['axonops']['cassandra']['metadata_url'] %>
+<% else -%>
+# metadata_url=http://some/service
+<% end -%>
+#
+# Sets a specified timeout value, in duration format, to be used when opening a communications link to metadata service,
+# referenced by an URLConnection. The timeout of zero (0s) is interpreted as an infinite timeout.
+# Defaults to 30 seconds.
+<% if node['axonops']['cassandra']['metadata_request_timeout'] -%>
+metadata_request_timeout=<%= node['axonops']['cassandra']['metadata_request_timeout'] %>
+<% else -%>
+# metadata_request_timeout=30s
+<% end -%>
