--- a/templates/default/cassandra.yaml.erb
+++ b/templates/default/cassandra.yaml.erb
@@ -1550,7 +1550,11 @@ server_encryption_options:
   legacy_ssl_storage_port_enabled: <%= @server_encryption_options['legacy_ssl_storage_port_enabled'] %>
   # Set to a valid keystore if internode_encryption is dc, rack or all
   keystore: <%= @server_encryption_options['keystore'] %>
+<%= if @server_encryption_options['keystore_password_file'] && !@server_encryption_options['keystore_password_file'].empty? %>
+  keystore_password_file: <%= @server_encryption_options['keystore_password_file'] %>
+<% else %>
   keystore_password: <%= @server_encryption_options['keystore_password'] %>
+<% end %>
   # Configure the way Cassandra creates SSL contexts.
   # To use PEM-based key material, see org.apache.cassandra.security.PEMBasedSslContextFactory
   # ssl_context_factory:
@@ -1566,7 +1570,11 @@ server_encryption_options:
   require_client_auth: <%= @server_encryption_options['require_client_auth'] %>
   # Set to a valid trustore if require_client_auth is true
   truststore: <%= @server_encryption_options['truststore'] %>
+<%= if @server_encryption_options['truststore_password_file'] && !@server_encryption_options['truststore_password_file'].empty? %>
+  truststore_password_file: <%= @server_encryption_options['truststore_password_file'] %>
+<% else %>
   truststore_password: <%= @server_encryption_options['truststore_password'] %>
+<% end %>
   # Verify that the host name in the certificate matches the connected host
   require_endpoint_verification: <%= @server_encryption_options['require_endpoint_verification'] %>
   # More advanced defaults:
@@ -1600,6 +1608,11 @@ client_encryption_options:
   # Set keystore and keystore_password to valid keystores if enabled is true
   keystore: <%= @client_encryption_options['keystore'] %>
   keystore_password: <%= @client_encryption_options['keystore_password'] %>
+<%= if @client_encryption_options['keystore_password_file'] && !@client_encryption_options['keystore_password_file'].empty? %>
+  keystore_password_file: <%= @server_encryption_options['keystore_password_file'] %>
+<% else %>
+  keystore_password: <%= @server_encryption_options['keystore_password'] %>
+<% end %>
   # Configure the way Cassandra creates SSL contexts.
   # To use PEM-based key material, see org.apache.cassandra.security.PEMBasedSslContextFactory
   # ssl_context_factory:
@@ -1609,8 +1622,11 @@ client_encryption_options:
   require_client_auth: <%= @client_encryption_options['require_client_auth'] %>
   # require_endpoint_verification: false
   # Set trustore and truststore_password if require_client_auth is true
-  truststore: <%= @client_encryption_options['truststore'] %>
+<%= if @client_encryption_options['truststore_password_file'] && !@client_encryption_options['truststore_password_file'].empty? %>
+  truststore_password_file: <%= @client_encryption_options['truststore_password_file'] %>
+<% else %>
   truststore_password: <%= @client_encryption_options['truststore_password'] %>
+<% end %>
   # More advanced defaults:
   protocol: <%= @client_encryption_options['protocol'] %>
   algorithm: <%= @client_encryption_options['algorithm'] %>
