--- a/templates/default/elasticsearch.yml.erb
+++ b/templates/default/elasticsearch.yml.erb
@@ -27,3 +27,19 @@ xpack.monitoring.collection.enabled: true
 # Additional settings for production
 bootstrap.memory_lock: true
 indices.query.bool.max_clause_count: 8192
+
+<% if node['axonops']['server']['elastic']['ssl']['enabled'] %>
+# HTTP Layer (Client to Elasticsearch)
+xpack.security.http.ssl.enabled: true
+xpack.security.http.ssl.verification_mode: certificate # or full, if you want hostname verification
+xpack.security.http.ssl.certificate_authorities: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/ca-cert.pem
+xpack.security.http.ssl.certificate: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/server-cert.pem
+xpack.security.http.ssl.key: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/server-key.pem
+
+# Transport Layer (Inter-node communication)
+xpack.security.transport.ssl.enabled: true
+xpack.security.transport.ssl.verification_mode: certificate # or full, if you want hostname verification
+xpack.security.transport.ssl.certificate_authorities: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/ca-cert.pem
+xpack.security.transport.ssl.certificate: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/server-cert.pem
+xpack.security.transport.ssl.key: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/server-key.pem
+<% end %>
