--- a/templates/default/elasticsearch.yml.erb
+++ b/templates/default/elasticsearch.yml.erb
@@ -16,21 +16,10 @@ http.port: <%= @listen_port %>
 discovery.type: <%= @discovery_type %>
 
 # Security
-xpack.security.enabled: false
-xpack.security.transport.ssl.enabled: false
-xpack.security.http.ssl.enabled: false
-
-# Monitoring
-xpack.monitoring.enabled: true
-xpack.monitoring.collection.enabled: true
-
-# Additional settings for production
-bootstrap.memory_lock: true
-indices.query.bool.max_clause_count: 8192
-
 <% if node['axonops']['server']['elastic']['ssl']['enabled'] %>
-# HTTP Layer (Client to Elasticsearch)
 xpack.security.http.ssl.enabled: true
+
+# HTTP Layer (Client to Elasticsearch)
 xpack.security.http.ssl.verification_mode: certificate # or full, if you want hostname verification
 xpack.security.http.ssl.certificate_authorities: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/ca-cert.pem
 xpack.security.http.ssl.certificate: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/server-cert.pem
@@ -42,4 +31,16 @@ xpack.security.transport.ssl.verification_mode: certificate # or full, if you wa
 xpack.security.transport.ssl.certificate_authorities: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/ca-cert.pem
 xpack.security.transport.ssl.certificate: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/server-cert.pem
 xpack.security.transport.ssl.key: <%= node['axonops']['server']['elastic']['ssl']['path'] %>/server-key.pem
+<% else %>
+xpack.security.enabled: false
+xpack.security.transport.ssl.enabled: false
+xpack.security.http.ssl.enabled: false
 <% end %>
+
+# Monitoring
+xpack.monitoring.enabled: true
+xpack.monitoring.collection.enabled: true
+
+# Additional settings for production
+bootstrap.memory_lock: true
+indices.query.bool.max_clause_count: 8192
