--- a/templates/default/axon-server.yml.erb
+++ b/templates/default/axon-server.yml.erb
@@ -33,14 +33,26 @@ elastic_host: <%= @elastic_host %>
 elastic_port: <%= @elastic_port %>
 <% end -%>
 
-cassandra:
-  hosts:
+cql_hosts:
 <% @cassandra_hosts.each do |host| -%>
-    - "<%= host %>"
+  - "<%= host %>"
 <% end -%>
-  username: "<%= @cassandra_username %>"
-  password: "<%= @cassandra_password %>"
-  dc: "<%= @cassandra_dc %>"
+cql_username: "<%= @cassandra_username %>"
+cql_password: "<%= @cassandra_password %>"
+cql_local_dc: "<%= @cassandra_dc %>"
+cql_ssl: <%= node['axonops']['cassandra']['ssl']['enabled'] %>
+cql_skip_verify: <%= node['axonops']['cassandra']['ssl']['cql_skip_verify'] || true %>
+<% if node['axonops']['cassandra']['ssl']['ca_file'] %>
+cql_ca_file: <%= node['axonops']['cassandra']['ssl']['ca_file'] %>
+<% end %>
+<% if node['axonops']['cassandra']['ssl']['cert_file'] && node['axonops']['cassandra']['ssl']['key_file'] %>
+cql_cert_file: <%= node['axonops']['cassandra']['ssl']['cert_file'] %>
+cql_key_file: <%= node['axonops']['cassandra']['ssl']['key_file'] %>
+<% end %>
+cql_autocreate_tables: <%= node['axonops']['cassandra']['ssl']['autocreate_tables'] || true %>
+cql_keyspace_replication: "<%= node['axonops']['server']['cassandra']['keyspace_replication'] %>"
+cql_read_consistency: <%= node['axonops']['cassandra']['ssl']['read_consistency'] || "LOCAL_ONE" %>
+cql_write_consistency: <%= node['axonops']['cassandra']['ssl']['read_consistency'] || "WRITE_ONE" %>
 
 <% if @tls_mode != 'disabled' -%>
 tls:
@@ -59,13 +71,13 @@ tls:
 retention:
   events: <%= @retention['events'] %>
   security_events: <%= @retention['security_events'] %>
-  
+
   metrics:
     high_resolution: <%= @retention['metrics']['high_resolution'] %>
     medium_resolution: <%= @retention['metrics']['medium_resolution'] %>
     low_resolution: <%= @retention['metrics']['low_resolution'] %>
     super_low_resolution: <%= @retention['metrics']['super_low_resolution'] %>
-  
+
   backups:
     local: <%= @retention['backups']['local'] %>
     remote: <%= @retention['backups']['remote'] %>
