--- a/templates/default/cassandra-jvm17-server.options.erb
+++ b/templates/default/cassandra-jvm17-server.options.erb
@@ -26,8 +26,7 @@
 #  GC SETTINGS  #
 #################
 
-
-
+<% if node['axonops']['cassandra']['gc_type'] == 'G1GC' -%>
 ### G1 Settings
 ## Use the Hotspot garbage-first collector.
 -XX:+UseG1GC
@@ -52,6 +51,24 @@
 # Save CPU time on large (>= 16GB) heaps by delaying region scanning
 # until the heap is 70% full. The default in Hotspot 8u40 is 40%.
 -XX:InitiatingHeapOccupancyPercent=<%= node['axonops']['cassandra']['gc_g1_initiating_heap_occupancy_percent'] %>
+<% elsif node['axonops']['cassandra']['gc_type'] == 'Shenandoah' -%>
+### Shenandoah Settings
+## Use the Shenandoah low-pause-time garbage collector
+-XX:+UseShenandoahGC
+
+# Shenandoah GC heuristics mode (adaptive, static, compact, aggressive)
+-XX:ShenandoahGCHeuristics=<%= node['axonops']['cassandra']['gc_shenandoah_heuristics'] %>
+
+# NUMA support (recommended for Shenandoah)
+<% if node['axonops']['cassandra']['gc_use_numa'] -%>
+-XX:+UseNUMA
+<% end -%>
+
+# Transparent Huge Pages support
+<% if node['axonops']['cassandra']['gc_use_transparent_huge_pages'] -%>
+-XX:+UseTransparentHugePages
+<% end -%>
+<% end -%>
 
 # For systems with > 8 cores, the default ParallelGCThreads is 5/8 the number of logical cores.
 # Otherwise equal to the number of cores when 8 or less.
@@ -59,6 +76,7 @@
 # By default, ConcGCThreads is 1/4 of ParallelGCThreads.
 # Setting both to the same value can reduce STW durations.
 # When leaving both unset then cassandra-env.sh will set them both to the number of your cores.
+<% if node['axonops']['cassandra']['gc_type'] == 'G1GC' -%>
 <% if node['axonops']['cassandra']['gc_parallel_threads'] -%>
 -XX:ParallelGCThreads=<%= node['axonops']['cassandra']['gc_parallel_threads'] %>
 <% else -%>
@@ -68,6 +86,14 @@
 -XX:ConcGCThreads=<%= node['axonops']['cassandra']['gc_conc_threads'] %>
 <% else -%>
 #-XX:ConcGCThreads=16
+<% end -%>
+<% elsif node['axonops']['cassandra']['gc_type'] == 'Shenandoah' -%>
+<% if node['axonops']['cassandra']['gc_shenandoah_parallel_gc_threads'] -%>
+-XX:ParallelGCThreads=<%= node['axonops']['cassandra']['gc_shenandoah_parallel_gc_threads'] %>
+<% end -%>
+<% if node['axonops']['cassandra']['gc_shenandoah_conc_gc_threads'] -%>
+-XX:ConcGCThreads=<%= node['axonops']['cassandra']['gc_shenandoah_conc_gc_threads'] %>
+<% end -%>
 <% end -%>
 
 ### JPMS
@@ -121,6 +147,7 @@
 
 -XX:ThreadPriorityPolicy=1
 -XX:StringTableSize=1000003
+<% if node['axonops']['cassandra']['gc_type'] == 'G1GC' -%>
 -XX:+UseG1GC
 -XX:G1RSetUpdatingPauseTimePercent=5
 -XX:MaxGCPauseMillis=500
@@ -128,6 +155,10 @@
 -XX:ParallelGCThreads=4
 -XX:ConcGCThreads=4
 -XX:+ParallelRefProcEnabled
+<% elsif node['axonops']['cassandra']['gc_type'] == 'Shenandoah' -%>
+-XX:+UseShenandoahGC
+-XX:ShenandoahGCHeuristics=adaptive
+<% end -%>
 
 ### Netty Options
 
